[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Analyticspro"
version = "0.1.0"
description = "Professional analytics and Instagram tracking tools"
keywords = ["analytics", "instagram", "tracker"]
license = {text = "MIT"}

[project.urls]
Homepage = "https://igunfollowtracker.com"
